2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
 - Cast around std::streamsize/icursorstream::difference_type mismatch.
 - Fixes icursorstream::ignore, as per #230.
 - Thanks once more Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-internal.hxx, include/pqxx/cursor.hxx,
 include/pqxx/util.hxx, test/unit/test_prepared_statement.cxx:
 - Moved distance() wrapper from compiler-internal into util.
 - Added some missing PQXX_LIBEXPORT directives.
 - Fixes #237.
 - Thanks Sam Kapilivsky for knocking the Visual Studio build into shape.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/strconv.hxx:
 - Add redundant string_traits<const char[N]> to keep Visual Studio happy.
 - Fixes #233; thanks Sam Kapilivsky.
 test/unit/test_string_conversion.cxx:
 - New.
 - Unit-tests string conversions (for now, only of various string types).
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_prepared_statement.cxx:
 - Fixed two Visual Studio warnings.
 - Fixes #234.  Thanks (you guessed it) Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
 - Fixed typos introduced in my application of the patch in #228.
 - Should get Visual Studio build working again.
 - Fixes #229.  Thanks Sam Kapilivsky.
2011-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.hxx:
 - Very slight wording change; hope it's a bit clearer.
 - Thanks Sam Kapilivsky for pointing this out in #222.
2011-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template, win32/vc-test.mak.template:
 - The rest of the patch in #228.  Thanks Sam Kapilivsky.
2011-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test000.cxx, test/test002.cxx, test/test060.cxx, test/test061.cxx,
 test/test062.cxx, test/test064.cxx, test/test071.cxx, test/test075.cxx:
 - Removed unneeded headers as per #228 (though it has more changes).
 - Thanks Sam Kapilivsky for the patch.